--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
     <link href="https://fonts.googleapis.com/css?family=Dosis|Poppins|Poiret+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="itunes-service.js"></script>
-    <script src="app.js"></script>
+    
   </head>
   <body>
     <h1 class="text-center header">Music is fun!</h1>  
@@ -19,6 +17,10 @@
     </form>
     </div>
     <div class="container">
+        <div class="row">
+            <div class="col-sm-12" id="myList">
+            </div>
+        </div>
         <div class="row">
             <div class="col-sm-12" id="songList">
             </div>
@@ -48,6 +50,10 @@
             </div>
         </div> 
       </div>-->
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="itunes-service.js"></script>
+    <script src="my-tunes-service.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
           
